[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/bonus_icon.gd" type="Script" id=1]
[ext_resource path="res://assets/star coin animation Pack/star coin blink/star coin normal.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2233.0
margin_bottom = 2243.0
rect_scale = Vector2( 0.05, 0.05 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]

[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


